# qcfinancial-docs

./: .gitignore  1_Objetos_Fundamentales.ipynb  20200117_curva_camara_clp.xlsx  20200120_camaraclp.csv  20200120_curva_camara_clp.xlsx  20200122_camaraclf.xlsx  20200122_camaraclp.xlsx  20230724_cclpcolusd.xlsx  20230724_cicpclp.xlsx  2_Cashflows.ipynb  3_Construccion_Operaciones.ipynb  404.html  4_Valorizacion_Sensibilidad.ipynb  5_Ejemplo_Forward_BTU.ipynb  5_SwapICPCLP.ipynb  6_Curva_SOFR.ipynb  7_Templates.ipynb  7_Templates_unfinished.ipynb  90_Valorizacion_Sensibilidad_Tests.ipynb  98_Pruebas_Construccion_Operaciones.ipynb  99_Ejemplo_Forward_BTU.ipynb  Amortizacion_Francesa.ipynb  CLAUDE.md  CONTRIBUTING.md  Ejemplos_QC_Financial.ipynb  Ejemplos_QC_Financial_2.ipynb  Ejemplos_QC_Financial_3.ipynb  Ejemplos_qcfinancial.ipynb  Ejemplos_qcfinancial_1.ipynb  Ejemplos_qcfinancial_2.ipynb  Ejemplos_qcfinancial_2b.ipynb  Ejemplos_qcfinancial_3.ipynb  Ejemplos_qcfinancial_4.ipynb  Forum.ipynb  QC_Financial_3.pyd  README.md  aux_functions.py  ejemplo_swap_spread.ipynb  index.html  main.py  (+5 more)
.claude/skills/publish-docs/: SKILL.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: Ejemplos_QC_Financial-checkpoint.ipynb  Ejemplos_QC_Financial_2-checkpoint.ipynb  Ejemplos_QC_Financial_3-checkpoint.ipynb  operación_2879-checkpoint.ipynb
1_Objetos_Fundamentales/: index.html
2_Cashflows/: index.html
3_Construccion_Operaciones/: index.html
4_Valorizacion_Sensibilidad/: index.html
5_SwapICPCLP/: index.html
6_Curva_SOFR/: index.html
Ejemplos_qcfinancial_1/: index.html
Ejemplos_qcfinancial_2/: index.html
Ejemplos_qcfinancial_3/: index.html
deprecated/: Amortizacion_Francesa.ipynb  Ejemplos_qcfinancial_2.ipynb  Ejemplos_qcfinancial_3.ipynb
docs/: 0_index.md  1_Objetos_Fundamentales.md  2_Cashflows.md  3_Construccion_Operaciones.md  4_Valorizacion_Sensibilidad.md  5_SwapICPCLP.md  6_Curva_SOFR.md  Ejemplos_qcfinancial_1.md  Ejemplos_qcfinancial_2.md  Ejemplos_qcfinancial_3.md  index.md
input/: 2024-08-02_cclfcolclp.csv  2024-08-02_ctabclf12m.csv  20240621_data_bbg.xlsx  20240621_sofr_data.xlsx  20250926_cclfcolusd.csv  20250926_cclfcolusd.xlsx  20250926_cclpcolusd.csv  20250926_cicpclp.csv  20250926_cicpclp.xlsx  curva_clf.xlsx  curva_clp.xlsx  curva_usd.xlsx  sofr.xlsx
new-site/: README.md  TRANSFORM_SPEC.md  page-shell.html  qcf-docs.css  transform.reference.js
new-site/reference/: QcFinancial Docs Render.dc.html  sample_output_ch1.html  sample_page_ch1.html
other/: 4a_Varios_Curvas.ipynb
qcfdocs/: __init__.py  build.py  chapters.py  cli.py  convert.py  notebooks.py
qcfdocs/templates/: __init__.py  page.html  qcf-docs.css
search/: search_index.json
tests/: test_counts.py
