[project]
name = "qcfinancial-docs"
version = "0.1.0"
description = "Documentation notebooks and static-site builder for the qcfinancial library."
readme = "README.md"
requires-python = ">=3.12"
# The docs toolchain (CLI + converter) is pure standard library, so the project
# itself has no install-time runtime dependencies. See dependency-groups below.
dependencies = []

[project.scripts]
# `uv run qcf-docs notebooks`  -> regenerate docs/*.md from the .ipynb
# `uv run qcf-docs build`      -> build the static HTML site into site/
qcf-docs = "qcfdocs.cli:main"

[project.optional-dependencies]
# The notebook *execution* surface -- only needed to RE-RUN the chapter notebooks
# in Jupyter. Install on demand: `uv sync --extra notebooks`.
# NOTE: qcfinancial publishes wheels only for macOS arm64 and Linux x86_64. On
# macOS Intel there is no wheel; provide the compiled module out-of-band (the
# vendored qcfinancial.cpython-3xx-darwin.so, kept out of git via .gitignore).
notebooks = [
    "qcfinancial",
    "pandas",
    "numpy",
    "holidays",
    "openpyxl",   # ch4 reads input/*.xlsx via pandas.read_excel
    "pydantic",   # used by qcf_wrappers.py
]

[tool.uv]
# The docs build toolchain, installed by default by `uv sync`. nbconvert reads
# the .ipynb JSON as-is, so none of this needs qcfinancial.
dev-dependencies = [
    "nbconvert",
    "jupyterlab",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qcfdocs"]
