[project]
name = "qcfinancial-docs"
version = "0.1.0"
description = "Documentation notebooks and static-site builder for the qcfinancial library."
readme = "README.md"
requires-python = ">=3.12"
# The docs toolchain (CLI + converter) is pure standard library, so the project
# itself has no install-time runtime dependencies. See dependency-groups below.
dependencies = [
    "holidays>=0.99",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "qcfinancial==1.11.3",
]

[project.scripts]
# `uv run qcf-docs notebooks`  -> regenerate docs/*.md from the .ipynb
# `uv run qcf-docs build`      -> build the static HTML site into site/
qcf-docs = "qcfdocs.cli:main"

[project.optional-dependencies]
# The notebook *execution* surface -- only needed to RE-RUN the chapter notebooks
# in Jupyter. Install on demand: `uv sync --extra notebooks`.
# NOTE: qcfinancial publishes wheels only for macOS arm64 and Linux x86_64. On
# macOS Intel there is no wheel; provide the compiled module out-of-band (the
# vendored qcfinancial.cpython-3xx-darwin.so, kept out of git via .gitignore).
notebooks = [
    "qcfinancial",
    "pandas",
    "numpy",
    "holidays",
    "openpyxl",   # ch4 reads input/*.xlsx via pandas.read_excel
    "pydantic",   # used by qcf_wrappers.py
]

[dependency-groups]
# The docs build toolchain, installed by default by `uv sync`. nbconvert reads
# the .ipynb JSON as-is, so none of this needs qcfinancial.
dev = [
    "nbconvert",
    "jupyterlab",
    "ipykernel",
    "pytest",
]

# qcfinancial is published to TestPyPI. Mark the index `explicit` so it is ONLY
# consulted for packages bound to it in [tool.uv.sources] below -- everything
# else (numpy, pandas, ...) resolves from normal PyPI. Without `explicit`, the
# resolver can wander onto TestPyPI and pick broken stub versions (e.g. numpy
# 1.9.3 that fails to build).
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
qcfinancial = { index = "testpypi" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qcfdocs"]
